- implemented x509/certvalid gtls auth mode
- implemented x509/name gtls auth mode
- changed fingerprint gtls auth mode to new format fingerprint
- changed config directive name to reflect different use
  $ActionSendStreamDriverCertFingerprint is now
  $ActionSendStreamDriverPermittedPeer and can be used both for
  fingerprint and name authentication (similar to the input side)
---------------------------------------------------------------------------
Version 3.19.3 (rgerhards), 2008-05-??
- added ability to authenticate the server against its certificate
  fingerprint
- bugfix: small mem leak in omfwd on exit (strmdriver name was not freed)
- bugfix: $ActionSendStreamDriver had no effect
- added ability for client to provide its fingerprint
- added ability for server to obtain client cert's fingerprint
---------------------------------------------------------------------------
Version 3.19.2 (rgerhards), 2008-05-16
- bugfix: TCP input modules did incorrectly set fromhost property
  (always blank)
- bugfix: imklog did not set fromhost property
- added "fromhost-ip" property
  Note that adding this property changes the on-disk format for messages.
  However, that should not have any bad effect on existing spool files.
  But you will run into trouble if you create a spool file with this
  version and then try to process it with an older one (after a downgrade).
  Don't do that ;)
- added "RSYSLOG_DebugFormat" canned template
- bugfix: hostname and fromhost were swapped when a persisted message
  (in queued mode) was read in
- bugfix: lmtcpclt, lmtcpsrv and lmgssutil did all link to the static
  runtime library, resulting in a large size increase (and potential
  "interesting" effects). Thanks to Michael Biebel for reporting the size
  issue.
- bugfix: TLS server went into an endless loop in some situations.
  Thanks to Michael Biebl for reporting the problem.
- fixed potential segfault due to invalid call to cfsysline
  thanks to varmojfekoj for the patch